tests/valid_seq/indirect_import_two_paths_helper_4.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module indirect_import_two_paths_helper_4.
:- interface.

:- mode e == out.
