tests/invalid/empty_interface.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module empty_interface.

:- interface.
